Structured the testimonial slider section. Test on mobile to ensure it is reponsive.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,11 +126,11 @@ width: 100vw;
 }
 
 .left{
-	display: none;
+	/*display: none;*/
 }
 
 .right{
-	display: none;
+	/*display: none;*/
 }
 
 .text{
@@ -184,23 +184,57 @@ width: 100vw;
 
 .left{
 	position: absolute;
+	top:50%;
+	left:2%;
+	z-index: 4;
+	color:#dbdbdb;
+}
+
+.left i{
+	font-size: 24px;
+}
+.right{
+	position: absolute;
+	top:50%;
+	right:2%;
+	z-index: 4;
+	color:#dbdbdb;
+}
+
+.right i{
+	font-size: 24px;
+}
+
+
+.left:hover{
+	color:#fff;
+	cursor: pointer;
+}	
+.right:hover{
+	color:#fff;
+	cursor: pointer;
+}
+
+
+.bottom_left{
+	position: absolute;
 	left:10%;
 	font-size: 8px;
 }
 
-.left i{
+.bottom_left i{
 	font-size: 32px;
 }
-.right{
+.bottom_right{
 	position: absolute;
 	top:1px;
-	/*right:2px;*/
 	right:10%;
 }
 
-.right i{
+.bottom_right i{
 	font-size: 32px;
 }
+
 
 .selectSlide{
 	text-align: center;
@@ -210,6 +244,25 @@ width: 100vw;
 }
 
 .dots{
+width:0.3px;
+height:0.3px;
+display: inline-block;
+padding:8px;
+margin:0 10px;
+border-radius:50%;
+cursor: pointer;
+}
+
+.inactive{
+	background-color:#dbdbdb;
+}
+
+.active{
+	background:#0077c8;
+}
+
+
+.dotsBottom{
 width:0.3px;
 height:0.3px;
 display: inline-block;
@@ -236,8 +289,8 @@ background-color:#dbdbdb;
 	text-align: center;
 	border:1px solid #919191;
 	height:auto;
-	width: auto;
-	max-width: 400px;
+	width: 100%;
+	max-width: 320px;
 }
 
 .service .box{
@@ -260,6 +313,7 @@ background-color:#dbdbdb;
 
 
 .image{
+	height: auto;
 	width: 100%;
 	max-width: 400px;
 	vertical-align: middle;
@@ -268,7 +322,7 @@ background-color:#dbdbdb;
 .image_contain{
 	position: relative;
 	height: auto;
-	width: auto;
+	width: 100%;
 }
 
 .description{
@@ -310,15 +364,23 @@ background-color:#dbdbdb;
 	color:#676767;
 }
 
+.slider_container{
+	width: 100%;
+	overflow: hidden;
+	margin:0 auto;
+}
 
 
 
 
 
+/*Testimonial Section*/
 #testimonials{
 	background-color: #0077c8;
 	padding:50px 0;
 	color:#fff;
+	overflow: hidden;
+
 }
 #testimonials .section_header{
 	color:#fff;
@@ -327,6 +389,32 @@ background-color:#dbdbdb;
 .testimonial{
 	border:1.5px solid #253746;
 }
+
+
+.testimonial_slider{
+	height: auto;
+	width:500vw;
+	padding:0 10px;
+	list-style: none;
+		
+}
+
+.testimonial_slider .testimonial_slide{
+	float: left;
+}
+
+
+
+.slide_viewer{
+	height: 400px;
+	width: 100%;
+	max-width: 334px;
+	overflow: hidden;
+	margin:0 auto;
+}
+
+
+
 footer{
 	text-align: center;
 	background-color: #253746;
@@ -430,7 +518,7 @@ footer{
 
 .container{
 	width: 80%;
-
+	/*overflow: hidden;*/
 }
 .dsk-top-nav{
 	display: block;
@@ -440,9 +528,13 @@ display: grid;
 grid-template-columns: repeat(4,1fr);
 grid-column-gap: 8px;
 }
-.testimonial{
+
+/*.testimonial{
 display: grid;
 grid-template-columns: repeat(2,1fr);
-}
+}*/
+
+
+
 }
 
